issue/NEX-8 Subir productos a Xero Implementado
